--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "expo": "~52.0.28",
@@ -21,7 +22,8 @@
     "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
