--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-swipe-list-view": "^3.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
