--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-swipe-list-view": "^3.2.9"
