--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.28",
+    "expo": "~52.0.38",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-swipe-list-view": "^3.2.9"
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
